[gd_scene load_steps=3 format=3 uid="uid://6tmo8kay6y12"]

[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_es6le"]
[ext_resource type="Script" path="res://scenes/menu/gameButton.gd" id="2_80knn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -64.0
offset_right = -36.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_es6le")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game
"
script = ExtResource("2_80knn")

[node name="Test" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Game" to="." method="_on_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
